[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/FadeInPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font-32.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/font-64.tres" type="DynamicFont" id=4]
[ext_resource path="res://entities/train/Train.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/title.ogg" type="AudioStream" id=6]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0
autoplay = true

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trains" type="Node2D" parent="."]

[node name="TopTrain" parent="Trains" instance=ExtResource( 5 )]
position = Vector2( 2552, 80 )
move_right = false

[node name="BottomTrain" parent="Trains" instance=ExtResource( 5 )]
position = Vector2( -1584, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -270.0
margin_right = 270.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 540, 0 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 704.0
margin_bottom = 200.0
rect_min_size = Vector2( 540, 200 )
custom_fonts/font = ExtResource( 4 )
text = "Stuck in the Hyperloop"
align = 1
valign = 1

[node name="Play" type="Button" parent="VBoxContainer"]
margin_left = 298.0
margin_top = 216.0
margin_right = 406.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Play !"

[node name="Story" type="Button" parent="VBoxContainer"]
margin_left = 306.0
margin_top = 296.0
margin_right = 398.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Story"

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_left = 282.0
margin_top = 376.0
margin_right = 422.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Controls"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_left = 314.0
margin_top = 456.0
margin_right = 390.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="FadeInPlayer" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Story" to="." method="_on_Story_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
